--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -12,6 +12,11 @@
                 <nav class="navbar navbar-dark bg-info">
                     <span class="navbar-brand">Calorie Tracker</span>
                     <a href="{% url 'index' %}" class="navbar-brand">Home</a>
+                    % if user.is_authenticated %}
+                        <a href="{% url 'login' %}" class="navbar-brand">Logout</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="navbar-brand">Login</a>
+                    {% endif %}
                 </nav>
             </div>
         </div>
