--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,67 +1,26 @@
 <html>
-
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-    <style>
-         .navbar-nav .nav-link {
-            font-weight: bold;
-            font-size: 1.1rem;
-            color: white !important;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #ffcc00 !important; /* Highlight color on hover */
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            font-size: 1.5rem;
-            color: white !important;
-        }
-
-        .navbar-toggler-icon {
-            background-color: white;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container">
-        <!-- Navbar -->
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-                    <a class="navbar-brand" href="{% url 'index' %}">Calorie Tracker</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'index' %}">Home</a>
-                            </li>
-                            {% if user.is_authenticated %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
-                                </li>
-                            {% else %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'login' %}">Login</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </div>
+                <nav class="navbar navbar-dark bg-info">
+                    <span class="navbar-brand">Calorie Tracker</span>
+                    <a href="{% url 'index' %}" class="navbar-brand">Home</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'login' %}" class="navbar-brand">Logout</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="navbar-brand">Login</a>
+                    {% endif %}
                 </nav>
             </div>
         </div>
 
-        <!-- Content -->
         <br><br>
 
         <div style="text-align:center" class="row">
@@ -74,7 +33,7 @@
                         </label>
                         <select class="col-md-6 form-control" name="food_consumed" id="food_consumed">
                             {% for food in foods %}
-                                <option value="{{ food.name }}">{{ food.name }}</option>
+                            <option value="{{food.name}}">{{food.name}}</option>
                             {% endfor %}
                         </select>
                         <button class="btn btn-success" type="submit">Add</button>
@@ -82,6 +41,7 @@
                 </form>
             </div>
         </div>
+
 
         <br>
 
@@ -92,6 +52,7 @@
                 <div class="progress">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="0"
                         aria-valuemin="0" aria-valuemax="0"></div>
+
                 </div>
             </div>
         </div>
@@ -100,7 +61,7 @@
         <div class="row">
             <div class="col-md-7">
                 <div>
-                    <h4 style="text-align:center">Today's Consumption</h4>
+                    <h4 style="text-align:center"> Today's Consumption</h4>
                 </div>
 
                 <table id="table" class="table table-striped table-primary">
@@ -113,15 +74,16 @@
                         <th style="text-align:center">Remove Item</th>
                     </tr>
                     {% for c in consumed_food %}
-                        <tr>
-                            <td style="text-align:center">{{ c.food_consumed.name }}</td>
-                            <td style="text-align:center">{{ c.food_consumed.carbs }}</td>
-                            <td style="text-align:center">{{ c.food_consumed.protein }}</td>
-                            <td style="text-align:center">{{ c.food_consumed.fats }}</td>
-                            <td style="text-align:center">{{ c.food_consumed.calories }}</td>
-                            <td style="text-align:center"><a class="btn btn-danger" href="{% url 'delete' c.pk %}">X</a>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td style="text-align:center">{{c.food_consumed.name}}</td>
+                        <td style="text-align:center">{{c.food_consumed.carbs}}</td>
+                        <td style="text-align:center">{{c.food_consumed.protein}}</td>
+                        <td style="text-align:center">{{c.food_consumed.fats}}</td>
+                        <td style="text-align:center">{{c.food_consumed.calories}}</td>
+                        <td style="text-align:center"><a class="btn btn-danger" href="{% url 'delete' c.pk %}">X</a>
+                        </td>
+                    </tr>
+
                     {% endfor %}
 
                     <tr class="bg-info text-white">
@@ -130,42 +92,48 @@
                         <td style="text-align:center" id="totalProtien"><b></b></td>
                         <td style="text-align:center" id="totalFats"><b></b></td>
                         <td style="text-align:center" id="totalCalories"><b></b></td>
+
+
                     </tr>
 
                 </table>
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-5 ">
                 <div class="">
-                    <h4 style="text-align:center">Today's Breakdown</h4>
+                    <h4 style="text-align:center">Today's breakdown</h4>
                 </div>
                 <div class="card-header text-white bg-info">
-                    <h4 style="text-align:center">Nutrients Breakdown</h4>
+                    <h4 style="text-align:center">Nutrients breakdown</h4>
                 </div>
                 <div class="col-md-12">
+
                     <canvas id="myChart" width="400" height="400"></canvas>
+
                 </div>
             </div>
         </div>
 
     </div>
 
-</body>
 
+</body>
 <script>
     var table = document.getElementById("table");
     var carbs = 0, protein = 0, fats = 0, calories = 0;
 
     for (var i = 1; i < table.rows.length - 1; i++) {
+        console.log(table.rows[i].cells[1].innerHTML);
         carbs += parseFloat(table.rows[i].cells[1].innerHTML);
         carbs = Math.round(carbs);
         protein += parseFloat(table.rows[i].cells[2].innerHTML);
-        protein = Math.round(protein);
+        protein = Math.round(protein)
         fats += parseFloat(table.rows[i].cells[3].innerHTML);
         fats = Math.round(fats);
         calories += parseFloat(table.rows[i].cells[4].innerHTML);
         calories = Math.round(calories);
     }
+    console.log(fats);
 
     document.getElementById("totalCarbs").innerHTML = '<b>' + carbs + '(gm)</b>';
     document.getElementById("totalProtien").innerHTML = '<b>' + protein + '(gm)</b>';
@@ -174,6 +142,7 @@
 
     var calPer = (calories / 2000) * 100;
     document.getElementsByClassName("progress-bar")[0].setAttribute("style", "width:" + calPer + "%");
+
 
     var total = carbs + protein + fats;
     var carbsP = Math.round((carbs / total) * 100);
@@ -193,16 +162,20 @@
                     'rgba(255, 99, 132, 1)',
                     'rgba(54, 162, 235, 1)',
                     'rgba(255, 206, 86, 1)',
+
                 ],
                 borderColor: [
                     'rgba(255, 99, 132, 1)',
                     'rgba(54, 162, 235, 1)',
                     'rgba(255, 206, 86, 1)',
+
                 ],
                 borderWidth: 1
             }]
         },
+
     });
+
 </script>
 
 </html>
