--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-                    <a class="navbar-brand" href="{% url 'index' %}">Calorie Tracker 1</a>
+                    <a class="navbar-brand" href="{% url 'index' %}">Calorie Tracker test</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
